* Optimize operations with plesk installer * Switch to last release in 12.5.x branch * Use cloning utility instead of db operations * Add cleanup step, to reduce image size * Add hints about known ports to expose in Dockerfile
Signed-off-by: Michael Zarubin <mzarubin@odin.com>

--- a/12.5/Dockerfile
+++ b/12.5/Dockerfile
@@ -4,7 +4,6 @@ FROM ubuntu:14.04
 
 MAINTAINER plesk-dev-leads@odin.com
 
-ENV DEBIAN_FRONTEND noninteractive
 ENV PLESK_DISABLE_HOSTNAME_CHECKING 1
 
 # allow services to start
@@ -13,11 +12,9 @@ RUN sed -i -e 's/exit.*/exit 0/g' /usr/sbin/policy-rc.d
 RUN apt-get update \
     && apt-get install -y wget \
     && wget -q -O /root/ai http://autoinstall.plesk.com/plesk-installer \
-    && chmod +x /root/ai \
-    && /root/ai \
-        --all-versions \
+    && bash /root/ai \
         --select-product-id=plesk \
-        --select-release-id=PLESK_12_5_29 \
+        --select-release-id=PLESK_12_5_30 \
         --install-component panel \
         --install-component phpgroup \
         --install-component web-hosting \
@@ -33,13 +30,26 @@ RUN apt-get update \
         -email changeme@example.com \
         -passwd changeme \
         -hostname-not-required \
-    && plesk bin license -i A00H00-327Q03-HD4W13-0BDZ18-V0E652 \
+    && plesk bin license -i A00Q00-28H603-TPKC32-NH3N93-XF3830 \
     && plesk bin settings --set admin_info_not_required=true \
     && plesk bin poweruser --off \
-    && plesk db "DELETE FROM IP_Addresses" \
-    && plesk db "DELETE FROM ip_pool"
+    && plesk bin cloning -u -prepare-public-image true -reset-license false -reset-init-conf false -skip-update true \
+	&& plesk bin ipmanage --auto-remap-ip-addresses true \
+	&& apt-get clean \
+	&& rm -rf /root/ai /root/parallels
 
 ADD run.sh /run.sh
 CMD /run.sh
 
+# Port to expose
+# 21 - ftp
+# 25 - smtp
+# 53 - dns
+# 80 - http
+# 110 - pop3
+# 143 - imaps
+# 443 - https
+# 3306 - mysql
+# 8880 - plesk via http
+# 8880 - plesk via https
 EXPOSE 21 80 8880
