--- a/preview/Dockerfile
+++ b/preview/Dockerfile
@@ -13,11 +13,10 @@ RUN sed -i -e 's/exit.*/exit 0/g' /usr/sbin/policy-rc.d
 RUN apt-get update \
     && apt-get install -y wget \
     && wget -q -O /root/ai http://autoinstall.plesk.com/plesk-installer \
-    && chmod +x /root/ai \
-    && /root/ai \
+    && bash /root/ai \
         --all-versions \
         --select-product-id=plesk \
-        --select-release-id=PLESK_12_5_29 \
+        --select-release-id=PLESK_17_0_6 \
         --install-component panel \
         --install-component phpgroup \
         --install-component web-hosting \
@@ -33,13 +32,26 @@ RUN apt-get update \
         -email changeme@example.com \
         -passwd changeme \
         -hostname-not-required \
-    && plesk bin license -i A00H00-327Q03-HD4W13-0BDZ18-V0E652 \
+    && plesk bin license -i A00000-K6QK03-KSG046-H6BK67-1GE201 \
     && plesk bin settings --set admin_info_not_required=true \
     && plesk bin poweruser --off \
-    && plesk db "DELETE FROM IP_Addresses" \
-    && plesk db "DELETE FROM ip_pool"
+    && plesk bin cloning -u -prepare-public-image true -reset-license false -reset-init-conf false -skip-update true \
+    && plesk bin ipmanage --auto-remap-ip-addresses true \
+    && apt-get clean \
+    && rm -rf /root/ai /root/parallels
 
 ADD run.sh /run.sh
 CMD /run.sh
 
-EXPOSE 21 80 8880
+# Port to expose
+# 21 - ftp
+# 25 - smtp
+# 53 - dns
+# 80 - http
+# 110 - pop3
+# 143 - imaps
+# 443 - https
+# 3306 - mysql
+# 8880 - plesk via http
+# 8443 - plesk via https
+EXPOSE 21 80 443 8880 8443
