Basic setup for remote MySQL support

--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -54,6 +54,9 @@ RUN apt-get update \
     && plesk bin cloning -u -prepare-public-image true -reset-license false -reset-init-conf false -skip-update true \
     && echo DOCKER > /usr/local/psa/var/cloud_id \
     && touch /root/first_run \
+    && plesk db dump > /root/psa.sql \
+    && plesk db dump apsc > /root/apsc.sql \
+    && chmod -x /usr/sbin/mysqld \
     && apt-get clean \
     && rm -rf /root/ai /root/parallels
 
