Allow weak password in docker images

--- a/windows/Dockerfile
+++ b/windows/Dockerfile
@@ -28,6 +28,7 @@ RUN powershell -Command \
     --init \
     -email changeme@example.com \
     -passwd changeme1Q** \
+    -allow-weak-passwords \
     -hostname-not-required ; \
     \
     C:\Plesk\bin\license.exe -i $env:LICENSE ; \
