--- a/latest/plesk-cloning-set-password.conf
+++ b/latest/plesk-cloning-set-password.conf
@@ -1,3 +1,3 @@
 [Service]
-ExecStopPost=/usr/sbin/plesk bin admin --set-admin-password -passwd "changeme1Q**"
+ExecStopPost=/usr/sbin/plesk bin admin --set-admin-password -passwd "changeme1Q**" -allow-weak-passwords
 ExecStopPost=/usr/bin/touch /root/.container_started
