Fix #47: Document cgroups args changes

--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -1,6 +1,7 @@
 # Plesk container with real systemd
-# Run in background: 'docker run -d --tmpfs /tmp --tmpfs /run --tmpfs /run/lock -v /sys/fs/cgroup:/sys/fs/cgroup:ro -p 8443:8443 IMAGE'
-# Run in foreground: 'docker run -ti --rm --tmpfs /tmp --tmpfs /run --tmpfs /run/lock -v /sys/fs/cgroup:/sys/fs/cgroup:ro -p 8443:8443 IMAGE', stop with 'halt' instead of Ctrl+D
+# To test it, run the container in foreground using the following command:
+# docker run -ti --rm --tmpfs /tmp --tmpfs /run --tmpfs /run/lock -v /sys/fs/cgroup:/sys/fs/cgroup --cgroupns=host --cap-add SYS_ADMIN --security-opt apparmor=unconfined -p 8443:8443 plesk/plesk
+# Stop it with 'halt' instead of Ctrl+D.
 
 ARG OS=ubuntu:20.04
 FROM $OS
