Add missed license parameter

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -2,6 +2,8 @@
 services:
   tests:
     build: ../latest/
+    environment:
+      LICENSE: A00Y00-1KWH10-REFG92-T9JF97-TBXC06
     logging:
       driver: none
     ports:
