Use a separate container for tests

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -1,6 +1,6 @@
 # Copyright 1999-2024. WebPros International GmbH.
 services:
-  tests:
+  plesk:
     build:
       context: ../latest/
       args:
@@ -15,6 +15,16 @@ services:
       - /run/lock
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup
-      - .:/opt/tests/
     cgroup: host
-    command: /opt/tests/wait-for-plesk.sh
+  tests:
+    image: debian:bookworm
+    depends_on:
+      - plesk
+    links:
+      - plesk
+    volumes:
+      - .:/opt/tests/
+    command: >
+      bash -c "apt-get update
+      && apt-get install -y curl
+      && /opt/tests/wait-for-plesk.sh"
